# awesome-earth-observation-instruments

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SCHEMA.md  package-lock.json  pyproject.toml
.github/workflows/: tests.yml  update_files.yml
catalogue/: catalogue.json
docs/: BODY.md  FOOTER.md  HEADER.md  changelog.md  events.md  index copy.md  index.md  publications.md  schema.md
docs/.vitepress/: config.mts
docs/instruments/: ALTUMAL04_lte_MICASENSE.md  ALTUMAL05_MICASENSE.md  ALTUMAL06_gte_MICASENSE.md  ALTUMPT_MICASENSE.md  ASTER.md  EMIT.md  ETM_L7.md  MODIS_AQUA.md  MODIS_TERRA.md  MSI_S2A.md  MSI_S2B.md  MSI_S2C.md  MSS_L1.md  MSS_L2.md  MSS_L3.md  MSS_L4.md  MSS_L5.md  OLCI_S3A.md  OLCI_S3B.md  OLI2_L9.md  OLI_L8.md  REDEDGE3_MICASENSE.md  REDEDGEMX_RX01_MICASENSE.md  REDEDGEMX_RX02_gte_MICASENSE.md  REDEDGEM_MICASENSE.md  REDEDGEP_MICASENSE.md  SEQUOIA_MULTISPECTRAL_PARROT.md  SEQUOIA_RGB_PARROT.md  TIRS2_L9.md  TIRS_L8.md  TM_L4.md  TM_L5.md  index.md
readme/: FOOTER.md  HEADER.md
schema/core/: core.yaml
schema/extensions/: cross-links.yaml  data-access.yaml  earth-engine.yaml  imaging.yaml  planetary-computer.yaml  spectral.yaml
src/awesome_earth_observation_instruments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bands/: ALTUMAL04_lte_MICASENSE_BANDS.csv  ALTUMAL05_gte_MICASENSE_BANDS.csv  ALTUMPT_MICASENSE_BANDS.csv  ASTER_BANDS.csv  ETM_L7_BANDS.csv  MODIS_BANDS.csv  MSI_S2A_BANDS.csv  MSI_S2B_BANDS.csv  MSI_S2C_BANDS.csv  MSS123_BANDS.csv  MSS45_BANDS.csv  OLCI_BANDS.csv  (+7 more)
tests/: test_generation.py
(+75 files in other folders)
