[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-earth-observation-instruments"
version = "0.2.0"
description = "Awesome Earth Observation Instruments catalogue and generation utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "David Montero Loaiza" }
]
dependencies = [
  "pandas>=2.0",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "referencing>=0.30"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]
